--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>countries Search</title>
+    <title>Countries Search</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <h1><u><b>Countries Search</b></u></h1>
@@ -18,5 +19,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
  <script src="js/ajaxjquery.js"></script>
+ 
 </body>
 </html>
